k8s/petclinic-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  namespace: petclinic
  labels:
    app: spring-petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
      - name: spring-petclinic
        image: #@ data.values.petclinic.image
        ports:
        - containerPort: 8080
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health/readiness
        #     port: 8080
        #   initialDelaySeconds: 25
        #   periodSeconds: 3
        # livenessProbe:
        #   httpGet:
        #     path: /actuator/health/liveness
        #     port: 8080
        #   initialDelaySeconds: 25
        #   periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: petclinic
  labels:
    app: spring-petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
    - name: http
      protocol: TCP
      port: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-petclinic
  namespace: petclinic
  labels:
    app: spring-petclinic
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  tls:
  - secretName: petclinic-tls-secret
    hosts:
    - #@ data.values.petclinic.host
  rules:
  - host: #@ data.values.petclinic.host
    http:
      paths:
      - backend:
          serviceName: spring-petclinic
          servicePort: 8080
